--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
-project(STARE)
+project(STARE
+LANGUAGES C CXX
+)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
