--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.9)
-project(STARE
-LANGUAGES C CXX
-)
+project(STARE)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
