--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "sneep"
+name = "stare"
 authors = [{name = "Dennis Hecker", email = "d.hecker@em.uni-frankfurt.de"}]
 dynamic = ["version", "description"]
